erDiagram
    %% ============================================
    %% BENCHSIGHT ENTITY RELATIONSHIP DIAGRAM
    %% 88 Tables (44 Dimension + 44 Fact)
    %% Generated: December 29, 2024
    %% ============================================

    %% ==================== CORE DIMENSIONS ====================
    
    dim_player {
        string player_id PK "P100001"
        string first_name
        string last_name
        string position
        int player_rating "2-6 scale"
        string team_id FK
    }
    
    dim_team {
        string team_id PK "N10001"
        string team_name
        string team_code
        string division
    }
    
    dim_season {
        string season_id PK "S2024"
        string season_name
        date start_date
        date end_date
    }
    
    dim_venue {
        string venue_id PK "VN0001"
        string venue_name
        string venue_code
    }
    
    dim_schedule {
        string game_id PK "18969"
        string season_id FK
        string home_team_id FK
        string away_team_id FK
        string venue_id FK
        date game_date
        time game_time
    }

    %% ==================== EVENT DIMENSIONS ====================
    
    dim_event_type {
        string event_type_id PK
        string event_type_name
        string category
    }
    
    dim_event_detail {
        string event_detail_id PK
        string event_detail_name
        string parent_type
    }
    
    dim_zone {
        string zone_id PK
        string zone_code "O/N/D"
        string zone_name
    }
    
    dim_strength {
        string strength_id PK
        string strength_code "5v5/5v4/etc"
        string strength_name
    }
    
    dim_period {
        string period_id PK
        int period_number
        string period_name
    }

    %% ==================== RINK COORDINATE DIMENSIONS ====================
    
    dim_rink_coord {
        string rink_coord_id PK "RC0001"
        string rink_coord_code "OZ_SLOT"
        float x_min
        float x_max
        float y_min
        float y_max
    }
    
    dim_rinkcoordzones {
        string box_id PK "OZ17"
        float x_min
        float x_max
        float y_min
        float y_max
        string danger "low/mid/high"
        string zone
        string side
    }
    
    dim_rinkboxcoord {
        string box_id PK "O05"
        float x_min
        float x_max
        float y_min
        float y_max
        string danger
        string zone
    }

    %% ==================== PLAY TYPE DIMENSIONS ====================
    
    dim_shot_type {
        string shot_type_id PK
        string shot_type_name
    }
    
    dim_pass_type {
        string pass_type_id PK
        string pass_type_name
    }
    
    dim_zone_entry_type {
        string entry_type_id PK
        string entry_type_name
    }
    
    dim_zone_exit_type {
        string exit_type_id PK
        string exit_type_name
    }
    
    dim_turnover_type {
        string turnover_type_id PK
        string turnover_type_name
    }

    %% ==================== CORE FACT TABLES ====================
    
    fact_events {
        string event_key PK
        string game_id FK
        int event_index
        string event_type FK
        string event_detail FK
        int period FK
        string event_team_zone FK
        float video_time
        string strength FK
    }
    
    fact_events_player {
        string events_player_key PK
        string event_key FK
        string player_id FK
        string player_role
        string game_id FK
    }
    
    fact_shifts {
        string shift_key PK
        string game_id FK
        string player_id FK
        int shift_number
        int period FK
        float start_time
        float end_time
        float duration
    }
    
    fact_shifts_player {
        string shift_player_key PK
        string game_id FK
        string player_id FK
        int shift_count
        float total_toi
    }

    %% ==================== STATS FACT TABLES ====================
    
    fact_player_game_stats {
        string player_game_stats_id PK
        string game_id FK
        string player_id FK
        string team_id FK
        int goals
        int assists
        int points
        int sog
        float toi_seconds
        int shift_count
        float cf_pct
        float xg_for
        float xg_against
        float game_score
        float performance_index
        int shots_high_danger
        int shots_medium_danger
        int shots_low_danger
    }
    
    fact_team_game_stats {
        string team_game_stats_id PK
        string game_id FK
        string team_id FK
        int goals_for
        int goals_against
        int shots_for
        int shots_against
    }
    
    fact_goalie_game_stats {
        string goalie_stats_id PK
        string game_id FK
        string player_id FK
        int saves
        int goals_against
        float save_pct
    }

    %% ==================== ADVANCED FACT TABLES ====================
    
    fact_h2h {
        string h2h_key PK
        string game_id FK
        string player_1_id FK
        string player_2_id FK
        int shifts_together
        float toi_together
        float goals_for
        float corsi_for
        float cf_pct
    }
    
    fact_wowy {
        string wowy_key PK
        string game_id FK
        string player_1_id FK
        string player_2_id FK
        int shifts_together
        int p1_shifts_without_p2
        float cf_pct_together
        float cf_pct_apart
        float cf_pct_delta
        float gf_pct_together
    }
    
    fact_line_combos {
        string line_combo_key PK
        string game_id FK
        string forward_combo
        string defense_combo
        int shifts
        float toi_together
        int goals_for
        float corsi_for
        float cf_pct
    }

    %% ==================== XY/LOCATION FACT TABLES ====================
    
    fact_shot_xy {
        string shot_xy_key PK
        string game_id FK
        string player_id FK
        float shot_x
        float shot_y
        string shot_rink_coord_id FK
        float xg
        bool is_goal
    }
    
    fact_player_xy_long {
        string xy_key PK
        string game_id FK
        string player_id FK
        float x
        float y
        float video_time
    }

    %% ==================== RELATIONSHIPS ====================
    
    dim_player ||--o{ fact_player_game_stats : "has"
    dim_player ||--o{ fact_events_player : "participates"
    dim_player ||--o{ fact_shifts : "plays"
    dim_player ||--o{ fact_h2h : "player_1"
    dim_player ||--o{ fact_h2h : "player_2"
    dim_player ||--o{ fact_wowy : "player_1"
    dim_player ||--o{ fact_wowy : "player_2"
    dim_player ||--o{ fact_shot_xy : "shoots"
    
    dim_team ||--o{ dim_player : "employs"
    dim_team ||--o{ fact_team_game_stats : "has"
    dim_team ||--o{ fact_player_game_stats : "has"
    
    dim_schedule ||--o{ fact_events : "contains"
    dim_schedule ||--o{ fact_shifts : "contains"
    dim_schedule ||--o{ fact_player_game_stats : "summarizes"
    dim_schedule ||--o{ fact_h2h : "contains"
    dim_schedule ||--o{ fact_wowy : "contains"
    dim_schedule ||--o{ fact_line_combos : "contains"
    
    dim_season ||--o{ dim_schedule : "contains"
    dim_venue ||--o{ dim_schedule : "hosts"
    
    dim_event_type ||--o{ fact_events : "classifies"
    dim_zone ||--o{ fact_events : "locates"
    dim_period ||--o{ fact_events : "times"
    dim_strength ||--o{ fact_events : "describes"
    
    dim_rinkcoordzones ||--o{ fact_shot_xy : "locates"
    dim_rink_coord ||--o{ fact_shot_xy : "maps"
    
    fact_events ||--o{ fact_events_player : "involves"
